--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.artemis.host=localhost
 spring.artemis.port=61616
 spring.artemis.user=admin
 spring.artemis.password=admin
-jms.queue.destination=demoQueue
+#jms.queue.destination=demoQueue
+spring.jms.pub-sub-domain=true
+spring.jms.topic.a=topic-a
